recursion.cons.lessons.recursion.cons.ButNlast.scala.error
butNlast:7: error: not found: value length
      return 1+length(list.tail)
               ^